# LensAI

./: .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_CHECKLIST.md  Makefile  README.md  docker-compose.yaml  env.example  lens_ai_lean_roadmap_refactored_cost_first_wedge.md  lens_ai_technical_build_plan_for_cursor_phased_tickets.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/api/: __init__.py  main.py
apps/dashboard/: next.config.js  package.json
apps/dashboard/app/: layout.tsx  page.tsx
docs/: plan.md
infra/worker/: package.json  tsconfig.json  wrangler.toml
infra/worker/src/: index.ts
scripts/: init.sql  seed.py
